<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <string name="toppings">Toppings</string>
    <string name="topping1">Whipped Cream</string>
    <string name="topping2">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="increment">+</string>
    <string name="quantity_init">0</string>
    <string name="decrement">-</string>
    <string name="price">Order Summary</string>
    <string name="order">Order</string>
    <string name="action_settings">Settings</string>
    <string name="too_many_coffees">Cannot order more than 100 coffees!</string>
    <string name="too_few_coffees">Cannot order less than 1 coffee!"</string>
    <string name="name">Name</string>
    <string name="total">Total</string>
    <string name="thanks">Thank you!</string>
    <string name="empty_order">Cannot order 0 coffees!</string>
    <string name="email_subject">JustJava Order for <xliff:g example="Stan" id="name">%s</xliff:g></string>
</resources>
